# mazegpt

./: .gitignore  README.md  investigate_sample.py  prompt.txt  pyproject.toml
config/: train_maze.py
data/mazes/: generate.py
mazegpt/: activation_addition.py  find_doubt.py  investigate_sample.py  linear_probes.py  model.py  prompt.txt  sample.py  steering_vector.py  train.py  utils.py
mazegpt/config/: train_addition.py  train_maze.py  train_maze_correctable.py  train_maze_fallible.py  train_maze_oracle.py
mazegpt/data/addition/: generate.py  prepare.py
mazegpt/data/mazes/: generate.py  prepare.py
mazegpt/hf/: dataset.py  test.py  train.py
mazegpt/hf/model/: tokenizer.json  vocab.json
mazegpt/notebooks/: 001_investigate_sample.py  003_probes_show_heatmap.py  004_probes_show_logits.py  005_probes_show_signal_on_each_step.py  006_activation_addition.py  activation_addition.py  create_animation.py  eval.py  find_difficult_maze.py  investigate_sample.py  linear_probes.py  prepare_data.py  probes.py  probes_show_heatmap.py  probes_show_logits.py  probes_show_signal_on_each_step.py
