[tool.poetry]
name = "mazegpt"
version = "0.1.0"
description = ""
authors = ["Gytis Daujotas <gytis@atob.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-chess = "^1.999"
tqdm = "^4.66.1"
numpy = "^1.25.2"
torch = "2.0.0"
tiktoken = "^0.4.0"
wandb = "^0.15.9"
gytis = { path = "../gytis-tools/", develop = false }
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"
lovely-tensors = "^0.1.15"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
